projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/SecurityCheckDef__mdt.object-meta.xml
<CustomObject>
    <description>Static registry of all security check definitions. One record per check, deployed with the package. Queried at scan runtime to populate findings and to display checks with zero findings explicitly in the UI. Set IsActive__c to false to disable a check without a code deploy.</description>
    <label>Security Check Definition</label>
    <pluralLabel>Security Check Definitions</pluralLabel>
</CustomObject>