projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Full category name matching SecurityFinding__c.Category__c picklist value.</description>
    <label>Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>