projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CategoryCode__c</fullName>
    <description>Short category code (UA, GU, SRA, SA, CAI, AA, LA, AGA, MS, FUE, CE, MON, HCB). Must never contain a comma.</description>
    <label>Category Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>