projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/CheckId__c.field-meta.xml
<CustomField>
    <fullName>CheckId__c</fullName>
    <description>Stable check code matching SecurityFinding__c.CheckId__c (e.g. UA-001). Used as DeveloperName with underscores (UA_001).</description>
    <label>Check Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>