projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/CheckName__c.field-meta.xml
<CustomField>
    <fullName>CheckName__c</fullName>
    <description>Human-readable name shown in the UI and stored in SecurityFinding__c.CheckName__c.</description>
    <label>Check Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>