projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>What the check detects and why it is a security risk. Maps to SecurityFinding__c.Description__c.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>