projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/FindingType__c.field-meta.xml
<CustomField>
    <fullName>FindingType__c</fullName>
    <description>Automated = violation directly detected. Recommendation = heuristic requiring manual admin review. Must match SecurityFinding__c.FindingType__c picklist values.</description>
    <label>Finding Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>