projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>Business and security consequences if exploited or left unaddressed. Maps to SecurityFinding__c.Impact__c.</description>
    <label>Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>