projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <description>Set to false to disable this check without a code deploy. Inactive checks are skipped by the runner and not counted in TotalChecksRun__c.</description>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>