projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <description>Step-by-step fix instructions. Maps to SecurityFinding__c.Remediation__c.</description>
    <label>Remediation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>