projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/SalesforceDocUrl__c.field-meta.xml
<CustomField>
    <fullName>SalesforceDocUrl__c</fullName>
    <description>Link to official Salesforce Help or Security Guide article for this check.</description>
    <label>Salesforce Doc URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>