projects/org-security-scanner/force-app/main/default/objects/SecurityCheckDef__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Default severity for this check. Must match SecurityFinding__c.Severity__c picklist values: Critical, High, Medium, Low, Informational.</description>
    <label>Severity</label>
    <length>30</length>
    <type>Text</type>
</CustomField>